WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132373
[iOS][WK2] Animated resize incorrectly assumes the layout width is the same as the view width
https://bugs.webkit.org/show_bug.cgi?id=132373
Summary
[iOS][WK2] Animated resize incorrectly assumes the layout width is the same a...
Benjamin Poulain
Reported
2014-04-29 20:32:38 PDT
[iOS][WK2] Animated resize incorrectly assumes the layout width is the same as the view width
Attachments
Patch
(4.89 KB, patch)
2014-04-29 20:39 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-29 20:39:57 PDT
Created
attachment 230453
[details]
Patch
Benjamin Poulain
Comment 2
2014-04-30 19:45:17 PDT
Comment on
attachment 230453
[details]
Patch Clearing flags on attachment: 230453 Committed
r168080
: <
http://trac.webkit.org/changeset/168080
>
Benjamin Poulain
Comment 3
2014-04-30 19:45:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug